feat(): chatbot complete (tool calling, streaming http with sse)